2008-03-08  Koji Arai  <arai@users.sourceforge.jp>

	* src/lhext.c (add_dirinfo): no longer suppose that contents of the LZH archive is sorted by pathname.

	* tests/lha-test18: added tests for above.

	* src/lharc.c (parse_suboption): added debugging option `--debug=nosort' and `--debug=norecursion'
	for above tests.

	* src/lha.h: added two global variables for above options: sort_contents, recursive_archiving;

	* src/lharc.c (init_variable): ditto.
	(sort_files): no sort arguments with --debug=nosort.
	(find_files): no sort directory entries with --debug=nosort.

	* src/lhadd.c (append_it): non-sorted and non-recursive archiving with --debug=nosort and --debug=norecursion.

	* src/lhadd.c (remove_one): should use the message() instead of printf().

2008-03-07  Koji Arai  <arai@users.sourceforge.jp>

	* man/lha.1: correct the description about the -m command.

2008-03-04  Koji Arai  <arai@users.sourceforge.jp>

	* man/lha.1: changed a little. the BUGS section was removed.

	* man/lha.1: correct English by Stanislav Brabec. Thanks.

2008-03-02  Koji Arai  <arai@users.sourceforge.jp>

	* src/getopt_long.c (has_argument_short): should treat "-ab" as "-a -b"
	for shortopts="-a[0123]b".

2008-03-02  Koji Arai  <arai@users.sourceforge.jp>

	* man/lha.1: refined.

2008-02-21  Koji Arai  <arai@users.sourceforge.jp>

	* src/header.c (canon_path): should remove duplicated slash.
	(the function name is renamed from remove_dots().)

	* tests/lha-test17: added a test for above.

2008-02-17  Koji Arai  <arai@users.sourceforge.jp>

	* src/lhext.c (extract_one) could not extract files under readonly directories, like:

	    dr-xr-xr-x 2 arai arai 4096 Jan  5 03:30 foo/
	    -rw-r--r-- 1 arai arai    0 Jan  5 03:30 foo/bar

	* tests/Makefile.am: added a test for above.

	* tests/lha-test.in: ditto.

	* tests/lha-test18: ditto.

2008-02-05  Koji Arai  <arai@users.sourceforge.jp>

	* config.h. configure.ac: added a configure option
	--with-additional-suffixes for SuSE Linux.
